2005-11-30  Romain Francoise  <romain@orebokech.com>

	* dframe.el (dframe-reposition-frame-emacs): Fix position
	computation for 'left location.
	Update copyright year.

2005-11-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help.el (help-map): Move initialization into declaration.

	* emacs-lisp/autoload.el (make-autoload): Handle defgroup specially.

	* help-fns.el (help-argument-name): Don't autoload.
	It's useless and triggers a bug in cus-dep.el causing ldefs-boot
	to be re-loaded when customizing the `help' group.

2005-11-30  John Paul Wallington  <jpw@gnu.org>

	* help-fns.el (describe-function-1): Fill arglist output.

2005-11-30  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-rect.el (cua--rectangle-overlays): Make	permanent-local.
	(cua--rectangle-post-command): Cleanup overlays and deactivate mark
	after revert-buffer (or anything else which kills all local variables).

	* apropos.el (apropos-parse-pattern): Doc fix.
	Set apropos-regexp directly, rather than expecting callers to do so.
	(apropos-command, apropos, apropos-value, apropos-documentation):
	Simplify calls to apropos-parse-pattern.

2005-11-29  Chong Yidong  <cyd@stupidchicken.com>

	* hi-lock.el (hi-lock-line-face-buffer, hi-lock-face-buffer)
	(hi-lock-face-phrase-buffer): Use hi-yellow face.
	(hi-lock-write-interactive-patterns): Use comment-region.

	* longlines.el (longlines-mode): Add mail-setup-hook.

	* mail/mailheader.el, mail/sendmail.el: Revert 2005-11-17 changes.

	* simple.el (sendmail-user-agent-compose, next-line):
	Conditionally use hard-newline.

2005-11-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* international/latexenc.el (latex-inputenc-coding-alist):
	Reword doc string.

2005-11-29  Chong Yidong  <cyd@stupidchicken.com>

	* help.el (describe-key-briefly, describe-key): Recognize default
	bindings.

2005-11-29  Romain Francoise  <romain@orebokech.com>

	* view.el (view-inhibit-help-message): New defcustom.
	(view-mode-enter): Use it.
