@@ -1,5 +1,8 @@
 2005-11-30  Romain Francoise  <romain@orebokech.com>
 
+	* speedbar.el (speedbar-default-position): New defcustom.
+	(speedbar-frame-reposition-smartly): Use it.
+
 	* dframe.el (dframe-reposition-frame-emacs): Fix position
 	computation for 'left location.
 	Update copyright year.
